# AdvancedCompilingTechniques.Assignments

./: .gitignore  CMakeLists.txt  README.md  all-check.sh  ast-interpreter.sh  build.sh  check.sh  docker-compose.yml  history.md  requirements.md
Assignment1/: CMakeLists.txt  history.md
Assignment1/src/: ASTInterpreter.cpp  Environment.cpp
Assignment2/: requirements.md
Assignment2/script/: build.sh  gen-bc.sh  run.sh
Assignment3/: .gitignore  requirements.md
Assignment3/script/: pack.sh
Assignment3/src/: LLVMAssignment.cpp  Liveness.h  PointToAnalysis.h
script/: check.sh  gen-ll-dot.sh  run.sh
src/: ASTInterpreter.cpp  Dataflow.h  Environment.cpp  Environment.h  LLVMAssignment.cpp  Liveness.h
testcases/: extern_func.c  gen-bc.sh  gen-ll-dot.sh
testcases/class/: test28.c  test34.c
testcases/self/: ast-test.c  test06.c  test07.c  test09.c  test11.c
